cambio de img header

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body{
  
 }
 header{
-    background: url(./assets/Imagenes/imgPLC2.png);
+    background: url(./assets/Imagenes/20231224_014915.jpg);
 }
 .fotoTiaPortal{
     width: 60% !important;
